# discord_dm_analyser

./: Cargo.toml
.github/workflows/: release.yml
src/: data.rs  ffi.rs  main.rs  serde_structs.rs
