[package]
name = "discord_dm_analyser"
version = "1.0.2"
edition = "2021"

[dependencies]
chrono = "0.4.38"
itertools = "0.13.0"
fxhash = "0.2.1"
num-format = "0.4.4"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde-this-or-that = "0.4.2"
anyhow = "1.0.93"
parking_lot = "0.12.3"
num-traits = "0.2.19"
image = "0.25.5"
crossterm = { version = "0.29.0", features = ["events"] }
